@@ -1,0 +1,41 @@
+#VRML V2.0 utf8
+
+Transform { rotation 1 0 0 0.4 translation 0 0 3 children [
+	DEF BOX Transform { children Shape {
+		appearance Appearance { material Material { } }
+		geometry Box { }
+} } ] }
+
+# Animation clock
+DEF Clock TimeSensor { cycleInterval 0.25 loop TRUE },
+
+# Animation path
+DEF ColumnPath OrientationInterpolator {
+	key [ 0.0 0.5 1.0 ]
+	keyValue [ 0.0 1.0 0.0 6.28, 0.0 1.0 0.0 3.14, 0.0 1.0 0.0 0.0, ]
+}
+
+DEF SCRIPT Script { 
+	eventIn  SFFloat set_fraction 
+	field SFInt32 eventCount 0
+	field SFBool  enabled TRUE
+	field SFNode TS USE Clock
+	field SFNode CP USE ColumnPath
+
+url "vrmlscript: 
+function eventsProcessed () {
+	eventCount = eventCount + 1;
+	if (eventCount == 200) {
+		eventCount = 0;
+		enabled = !enabled;
+		if (enabled == true) {
+			addRoute (TS,'fraction_changed',CP,'set_fraction');
+		} else {
+			Browser.deleteRoute (TS,'fraction_changed',CP,'set_fraction');
+		}
+	}
+}
+"}
+
+# route done by javascript ROUTE Clock.fraction_changed TO ColumnPath.set_fraction
+ROUTE ColumnPath.value_changed TO BOX.set_rotation
